fix code z-index sang background-img

--- a/CodeOnTap/style.css
+++ b/CodeOnTap/style.css
@@ -8,6 +8,15 @@
     font-size: 40px;
 }
 
+.dethigk {
+    background-image: url('../grass.png'), url('../back.png');
+    background-repeat: repeat-x, repeat;
+    background-position: bottom, top;
+    width: 100%;
+    height: 100vh;
+    
+}
+/* 
 #back {
     display: flex;
     flex-direction: column;
@@ -26,9 +35,9 @@
 
 #img_bottom_left, #img_bottom_right {
     width: 50%;
-}
+} */
 
-#container {
+.container {
     position: absolute;
     z-index: 100;
     width: 70%;
